# kinesis

./: Cargo.toml  build.rs
res/shaders/: blit.spv  shader.spv  shader.wgsl
src/: app.rs  lib.rs  main.rs
src/app/: components.rs  engine.rs
src/app/engine/: camera.rs  egui_renderer.rs  mipmapper.rs  model.rs  pipeline_statistics.rs  query.rs  resources.rs  texture.rs
