[package]
name = "kinesis"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
color-eyre = "0.6.5"
egui = "0.34.3"
env_logger = "0.11.10"
image = { version = "0.25.10", features = ["jpeg", "png"] }
log = "0.4.32"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
