[package]
name = "kinesis"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
color-eyre = "0.6.5"
eframe = "0.34.3"
egui-winit = "0.34.3"
env_logger = "0.11.10"
gltf = { version = "1.4.1", features = [
  "KHR_texture_transform",
  "extensions",
  "extras",
  "import",
  "utils",
] }
image = { version = "0.25.10", features = ["jpeg", "png"] }
log = "0.4.32"
nalgebra = "0.35.0"
num-format = { version = "0.4.4", default-features = false }
pollster = "0.4.0"
rayon = "1.12.0"
wgpu = { version = "29.0.3", features = ["spirv"] }
winit = "0.30.13"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[build-dependencies]
color-eyre = "0.6.5"
fs_extra = "1.3.0"
glob = "0.3.3"
